--- a/CRUD/views/sample_data.ejs
+++ b/CRUD/views/sample_data.ejs
@@ -19,25 +19,45 @@
             <%= title %>
         </h1>
         <% if(action=='add' ) {%>
-             <div class="card">
+            <div class="card">
                 <div class="card-header">Sample Form</div>
                 <div class="card-body">
-                    <form action="/sample_data/add_ample_data">
+                    <form action="/sample_data/add_sample_data" method="POST">
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="mb-3">
                                     <label for="">First Name</label>
                                     <input type="text" name="fname" id="first_name" class="form-control">
                                 </div>
+                            </div>
+                            <div class="col-md-6">
                                 <div class="mb-3">
-                                    <label for="">First Name</label>
-                                    <input type="text" name="fname" id="first_name" class="form-control">
+                                    <label for="">Second Name</label>
+                                    <input type="text" name="sname" id="second_name" class="form-control">
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="mb-3">
+                                    <label for="">Age</label>
+                                    <input type="number" name="age" id="age" class="form-control">
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="mb-3">
+                                    <label for="">Gender</label>
+                                    <select name="gender" class="form-control">
+                                        <option value="Male">Male</option>
+                                        <option value="Female">Female</option>
+                                    </select>
                                 </div>
                             </div>
                         </div>
+                        <div class="mb-3">
+                            <input type="submit" name="submit_button" class="btn btn-primary" value="Add" />
+                        </div>
                     </form>
                 </div>
-             </div>
+            </div>
             <% }else{%>
                 <div class="card">
                     <div class="card-header">
