--- a/CRUD/views/sample_data.ejs
+++ b/CRUD/views/sample_data.ejs
@@ -95,7 +95,9 @@
                                         <td>
                                             <%= data.gender %>
                                         </td>
-                                        <td></td>
+                                        <td>
+                                            <a href="/sample_data/edit/<%= data.id %>" class="btn btn-primary btn-sm">Edit</a>
+                                        </td>
                                     </tr>
                                     <% }); } else { %>
                                         <tr>
