--- a/CRUD/views/sample_data.ejs
+++ b/CRUD/views/sample_data.ejs
@@ -82,7 +82,7 @@
                                     <div class="mb-3">
                                         <label>Last Name</label>
                                         <input type="text" name="last_name" id="last_name" class="form-control"
-                                            value="<%= sampleData.last_name %>" />
+                                            value="<%= sampleData.second_name %>" />
                                     </div>
                                 </div>
                             </div>
@@ -141,7 +141,7 @@
                                                 <%= data.first_name %>
                                             </td>
                                             <td>
-                                                <%= data.last_name %>
+                                                <%= data.second_name %>
                                             </td>
                                             <td>
                                                 <%= data.age %>
