--- a/CRUD/views/sample_data.ejs
+++ b/CRUD/views/sample_data.ejs
@@ -81,7 +81,7 @@
                                 <div class="col-md-6">
                                     <div class="mb-3">
                                         <label>Last Name</label>
-                                        <input type="text" name="last_name" id="last_name" class="form-control"
+                                        <input type="text" name="second_name" id="last_name" class="form-control"
                                             value="<%= sampleData.second_name %>" />
                                     </div>
                                 </div>
