--- a/Ajax-crud/views/sample_data.ejs
+++ b/Ajax-crud/views/sample_data.ejs
@@ -1,101 +1,95 @@
-
 <!doctype html>
 <html lang="en">
-    <head>
-        <!-- Required meta tags -->
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <!-- Bootstrap CSS -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link href="https://cdn.datatables.net/1.12.0/css/dataTables.bootstrap5.min.css" rel="stylesheet">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-        <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <link href="https://cdn.datatables.net/1.12.0/css/dataTables.bootstrap5.min.css" rel="stylesheet">
 
-        <script src="https://cdn.datatables.net/1.12.0/js/jquery.dataTables.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js"
+        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 
-        <script src="https://cdn.datatables.net/1.12.0/js/dataTables.bootstrap5.min.js"></script>
+    <script src="https://cdn.datatables.net/1.12.0/js/jquery.dataTables.min.js"></script>
 
-        <title></title>
-    </head>
-    <body>
+    <script src="https://cdn.datatables.net/1.12.0/js/dataTables.bootstrap5.min.js"></script>
 
-        <div class="container">
-            <h1 class="mt-4 mb-4 text-center text-primary"><b><%= title %></b></h1>
+    <title></title>
+</head>
 
-            <span id="message"></span>
-            <div class="card">
-                <div class="card-header">
-                    <div class="row">
-                        <div class="col col-sm-9">Sample Data</div>
-                        <div class="col col-sm-3">
-                        </div>
-                    </div>
-                </div>
-                <div class="card-body">
-                    <div class="table-responsive">
-                        <table class="table table-striped table-bordered" id="sample_data">
-                            <thead>
-                                <tr>
-                                    <th>First Name</th>
-                                    <th>Last Name</th>
-                                    <th>Gender</th>
-                                    <th>Age</th>
-                                    <th>Action</th>
-                                </tr>
-                            </thead>
-                            <tbody></tbody>
-                        </table>
+<body>
+
+    <div class="container">
+        <h1 class="mt-4 mb-4 text-center text-primary"><b>
+                <%= title %>
+            </b></h1>
+
+        <span id="message"></span>
+        <div class="card">
+            <div class="card-header">
+                <div class="row">
+                    <div class="col col-sm-9">Sample Data</div>
+                    <div class="col col-sm-3">
                     </div>
                 </div>
             </div>
+            <div class="card-body">
+                <div class="table-responsive">
+                    <table class="table table-striped table-bordered" id="sample_data">
+                        <thead>
+                            <tr>
+                                <th>First Name</th>
+                                <th>Last Name</th>
+                                <th>Gender</th>
+                                <th>Age</th>
+                                <th>Action</th>
+                            </tr>
+                        </thead>
+                        <tbody></tbody>
+                    </table>
+                </div>
+            </div>
         </div>
-    </body>
+    </div>
+</body>
+
 </html>
 
-
-
 <script>
-
-$(document).ready(function(){
-
-    load_data();
-
-    function load_data()
-    {
-        $.ajax({
-            url:"http://localhost:3000/sample_data/action",
-            method:"POST",
-            data:{action:'fetch'},
-            dataType : "JSON",
-            success:function(data)
-            {
-                var html = '';
-
-                if(data.data.length > 0)
-                {
-                    for(var count = 0; count < data.data.length; count++)
-                    {
-                        html += `
-                        <tr>
-                            <td>`+data.data[count].first_name+`</td>
-                            <td>`+data.data[count].last_name+`</td>
-                            <td>`+data.data[count].gender+`</td>
-                            <td>`+data.data[count].age+`</td>
-                            <td></td>
-                        </tr>
-                        `;
+    $(document).ready(function () {
+        load_data();
+        function load_data() {
+            $.ajax({
+                url: "http://localhost:3000/sample_data/action",
+                method: "POST",
+                data: { action: 'fetch' },
+                dataType: "JSON",
+                success: function (data) {
+                    var html = '';
+                    if (data.data.length > 0) {
+                        for (var count = 0; count < data.data.length; count++) {
+                            html += `
+                               <tr>
+                                 <td>`+ data.data[count].first_name + `</td>
+                                 <td>`+ data.data[count].second_name + `</td>
+                                 <td>`+ data.data[count].gender + `</td>
+                                 <td>`+ data.data[count].age + `</td>
+                                 <td></td>
+                               </tr>
+                            `;
+                        }
                     }
+                    $('#sample_data tbody').html(html);
                 }
-
-                $('#sample_data tbody').html(html);
-            }
-        });
-    }
-
-});
-
+            });
+        }
+    });
 </script>
-
