--- a/Ajax-crud/views/sample_data.ejs
+++ b/Ajax-crud/views/sample_data.ejs
@@ -124,7 +124,7 @@
                             html += `
                         <tr>
                             <td>`+ data.data[count].first_name + `</td>
-                            <td>`+ data.data[count].last_name + `</td>
+                            <td>`+ data.data[count].second_name + `</td>
                             <td>`+ data.data[count].gender + `</td>
                             <td>`+ data.data[count].age + `</td>
                             <td></td>
