--- a/Ajax-crud/views/sample_data.ejs
+++ b/Ajax-crud/views/sample_data.ejs
@@ -79,7 +79,7 @@
                     </div>
                     <div class="mb-3">
                         <label class="form-label">Last Name</label>
-                        <input type="text" name="last_name" id="last_name" class="form-control" />
+                        <input type="text" name="second_name" id="last_name" class="form-control" />
                     </div>
                     <div class="mb-3">
                         <label class="form-label">Gender</label>
